--- a/package.json
+++ b/package.json
@@ -1,30 +1,6 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "gatsby": "^2.19.45",
-    "gatsby-image": "^2.2.44",
-    "gatsby-plugin-manifest": "^2.2.48",
-    "gatsby-plugin-offline": "^3.0.41",
-    "gatsby-plugin-react-helmet": "^3.1.24",
-    "gatsby-plugin-sharp": "^2.4.13",
-    "gatsby-source-filesystem": "^2.1.56",
-    "gatsby-transformer-sharp": "^2.3.19",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
-  },
-  "devDependencies": {
-    "prettier": "^1.19.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -32,13 +8,58 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "buildOLD": "yarn lint && yarn assetsJson && react-scripts build && yarn zip",
+    "lambda": "netlify-lambda serve src/lambda --config ./config/webpack.functions.serve.js",
+    "build:lambda": "netlify-lambda build src/lambda --config ./config/webpack.functions.build.js",
+    "lint": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "lint:fix": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix . ",
+    "zip": "tsc src/lambda/signup.ts --rootDir src/lambda  --outDir lambda/signup && tsc src/lambda/confirm.ts --rootDir src/lambda  --outDir lambda/confirm && tsc src/lambda/unsubscribe.ts --rootDir src/lambda  --outDir lambda/unsubscribe",
+    "assetsJson": "tsc utils/createAssetsJson.ts --outDir build && node build/createAssetsJson.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  "dependencies": {
+    "@types/aws-lambda": "^8.10.19",
+    "@types/dotenv": "6.1.1",
+    "@types/reach__router": "1.3.1",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.2",
+    "@types/react-helmet": "5.0.15",
+    "@types/styled-components": "5.0.1",
+    "add": "2.0.6",
+    "dotenv": "8.2.0",
+    "gatsby": "2.19.45",
+    "gatsby-image": "2.2.44",
+    "gatsby-plugin-manifest": "2.2.48",
+    "gatsby-plugin-offline": "3.0.41",
+    "gatsby-plugin-react-helmet": "3.1.24",
+    "gatsby-plugin-sharp": "2.4.13",
+    "gatsby-plugin-typescript": "2.3.0",
+    "gatsby-source-filesystem": "2.1.56",
+    "gatsby-transformer-sharp": "2.3.19",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-helmet": "5.2.1",
+    "styled-components": "5.0.1",
+    "typescript": "3.8.3"
   },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "2.3.1",
+    "@typescript-eslint/parser": "2.3.1",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "2.5.1",
+    "http-proxy-middleware": "1.0.3",
+    "husky": "3.0.5",
+    "prettier": "2.0.0"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT"
 }
