--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/.pnp
+.pnp.js
 
 # Typescript v1 declaration files
 typings/
@@ -67,3 +69,9 @@ yarn-error.log
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
+
+# production
+/build
+/lambda
+/.netlify
+
