--- a/package.json
+++ b/package.json
@@ -2,29 +2,30 @@
   "name": "gatsby-starter-default",
   "private": true,
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
+    "build": "npm run lint && npm run zip && npm run build && npm run assetsJson",
+    "build-gatsby": "gatsby build",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "buildOLD": "yarn lint && yarn assetsJson && react-scripts build && yarn zip",
-    "lambda": "netlify-lambda serve src/lambda --config ./config/webpack.functions.serve.js",
-    "build:lambda": "netlify-lambda build src/lambda --config ./config/webpack.functions.build.js",
-    "lint": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
-    "lint:fix": "yarn eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix . ",
+    "serve": "gatsby serve",
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix . ",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "zip": "tsc src/lambda/signup.ts --rootDir src/lambda  --outDir lambda/signup && tsc src/lambda/confirm.ts --rootDir src/lambda  --outDir lambda/confirm && tsc src/lambda/unsubscribe.ts --rootDir src/lambda  --outDir lambda/unsubscribe",
     "assetsJson": "tsc utils/createAssetsJson.ts --outDir build && node build/createAssetsJson.js"
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.19",
     "@types/dotenv": "6.1.1",
+    "@types/mongodb": "3.5.2",
+    "@types/node": "13.9.3",
+    "@types/nodemailer": "6.4.0",
+    "@types/nodemailer-mailgun-transport": "1.4.1",
     "@types/reach__router": "1.3.1",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-helmet": "5.0.15",
-    "@types/styled-components": "5.0.1",
+    "@types/styled-components": "4.1.8",
     "add": "2.0.6",
     "dotenv": "8.2.0",
     "gatsby": "2.19.45",
@@ -37,6 +38,9 @@
     "gatsby-plugin-typescript": "2.3.0",
     "gatsby-source-filesystem": "2.1.56",
     "gatsby-transformer-sharp": "2.3.19",
+    "mongodb": "^3.1.13",
+    "nodemailer": "^6.1.0",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
