--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "sourceMap": true,
     "noEmit": true,
+    "downlevelIteration": true,
     "jsx": "preserve",
     "lib": [
       "dom",
