--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-starter-default",
   "private": true,
   "scripts": {
-    "build": "npm run lint && npm run zip && npm run build && npm run assetsJson",
+    "build": "npm run lint && npm run zip && npm run build-gatsby && npm run assetsJson",
     "build-gatsby": "gatsby build",
     "clean": "gatsby clean",
     "serve": "gatsby serve",
