--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "13.9.3",
     "@types/nodemailer": "6.4.0",
     "@types/nodemailer-mailgun-transport": "1.4.1",
+    "@types/query-string": "6.3.0",
     "@types/reach__router": "1.3.1",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.2",
@@ -42,6 +43,7 @@
     "nodemailer": "^6.1.0",
     "nodemailer-mailgun-transport": "^1.4.0",
     "prop-types": "15.7.2",
+    "query-string": "6.12.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
