--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore --fix . ",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "zip": "tsc src/lambda/signup.ts --rootDir src/lambda  --outDir lambda/signup && tsc src/lambda/confirm.ts --rootDir src/lambda  --outDir lambda/confirm && tsc src/lambda/unsubscribe.ts --rootDir src/lambda  --outDir lambda/unsubscribe",
-    "assetsJson": "tsc utils/createAssetsJson.ts --outDir ts && node ts/createAssetsJson.js"
+    "assetsJson": "tsc utils/createAssetsJson.ts --outDir public && node public/createAssetsJson.js"
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.19",
