--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "query-string": "6.12.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-h5-audio-player": "3.0.5",
     "react-helmet": "5.2.1",
     "styled-components": "5.0.1",
     "typescript": "3.8.3"
