--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,7 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "prettier/@typescript-eslint",
-    "prettier/react",
+    "prettier",
     "plugin:prettier/recommended" // must be last in extends array
   ],
   "env": {
