--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,16 @@
   "react/state-in-constructor":"off",
   "import/prefer-default-export":"off",
   "import/extensions":"off",
-  "@typescript-eslint/require-await":"off"
+  "@typescript-eslint/require-await":"off",
+  "no-use-before-define": "off",
+  "@typescript-eslint/no-use-before-define": ["error"],
+  "@typescript-eslint/explicit-module-boundary-types": "off",
+  "@typescript-eslint/no-unsafe-assignment": "warn",
+  "@typescript-eslint/no-unsafe-member-access": "warn",
+  "@typescript-eslint/no-unsafe-call": "warn",
+  "@typescript-eslint/no-unsafe-return": "warn",
+  "@typescript-eslint/restrict-template-expressions": "off",
+  "@typescript-eslint/no-floating-promises": "off",
+  "react/destructuring-assignment": "off"
   }
 }
