--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "17.0.2",
     "react-h5-audio-player": "3.7.2",
     "react-helmet": "5.2.1",
+    "react-is": "17.0.2",
     "styled-components": "5.3.1",
     "typescript": "4.4.3"
   },
